--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.4",
+    "SpinKit": "spinkit#^1.2.5"
+  }
 }
